@@ -24,6 +24,8 @@ Version 0.4
 	Simplified PdfObject constructor
 	Improved annotation support
 	Added support to encode names and various name testcases
+	Fixed ascent and descent of fonts
+	Improved PdfImage API
 	
 Version 0.3
     TOTAL revamp of PdfObject & PdfVariant to enable clean/consistent object handling;
